[package]
name = "utopia-core"
version = "0.0.1"
authors = ["sp1rit <sp1rit@disroot.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utopia-common = { path = "../utopia-common" }
utopia-module = { path = "../utopia-module" }
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#serde_yaml = "0.8"
libloading = "0.7"
tokio = {version = "1.6", features=["rt", "rt-multi-thread", "net", "sync", "signal", "io-util", "macros", "time"]}
futures = "0.3"
